# helper-app

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  DS_Store_Setup.scpt  FIRST_TIME_SETUP.md  INSTALL.md  README.md  build-linux.sh  build-mac.sh  build-windows.bat  build.sh  configure-linux.sh  configure-mac.sh  configure-windows.bat  vcpkg.json
cmake/: DaveConfig.cmake.in
src/: curl_builder.cpp  curl_builder.h  decoder.cpp  decoder.h  main.cpp  unpacker.cpp  unpacker.h
src/core/: curl_builder.cpp  curl_builder.h  decoder.cpp  decoder.h  unpacker.cpp  unpacker.h
src/tests/: test_curl_builder.cpp  test_decoder.cpp  test_unpacker.cpp
src/ui/: mainwindow.cpp  mainwindow.h
